--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "ngx-webcam": "^0.4.1",
+    "primeicons": "^6.0.1",
     "primeng": "^17.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
