--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@types/moment": "^2.13.0",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "ngx-webcam": "^0.4.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.5.0",
+    "recordrtc": "^5.6.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -33,6 +35,7 @@
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/recordrtc": "^5.6.14",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
